--- a/src/app/user-profile-dialog/user-profile-dialog.component.html
+++ b/src/app/user-profile-dialog/user-profile-dialog.component.html
@@ -1,4 +1,4 @@
-<p-dialog header="User Profile" [(visible)]="isShowing" [modal]="true" [maximizable]="true" class="user-profile-dialog">
+<p-dialog #userProfileDialog header="User Profile" [(visible)]="isShowing" [modal]="true" [maximizable]="true" class="user-profile-dialog">
 
   <div class="dialog-items">
     <span class="inline">Username: <b>{{getFriendlyUsername()}}</b></span>
