Added a 'quick view' concept to easily see Fields in a separate dialog, to avoid having to Edit a Thing and only see in the text area which is awkward. Also removed delay on autocomplete so we can see the results instantly

--- a/src/app/datatable/datatable.component.css
+++ b/src/app/datatable/datatable.component.css
@@ -79,7 +79,6 @@
 .fields-scroller {
   max-height: 150px;
   overflow: auto;
-  white-space: pre-wrap; /* Maintain our \n and \t from textarea output */
 }
 
 .no-things-wrap {
@@ -165,6 +164,10 @@
 
 .favorite-section label {
   padding-right: 10px;
+}
+
+.zoom-in {
+  cursor: zoom-in;
 }
 
 .limit-text {
