Remember scroll position on table manipulation. Update browser history for modal dialogs for better Back button support. Touch-hold a row to Edit. Quickview dialog has an Edit button now. Fixed autoresizing text area to scroll properly. Better select on Autocomplete for ease of use

--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -136,7 +136,7 @@
     }
   </ng-template>
   <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
-    <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex">
+    <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex" (touchstart)="rowTouchStart(data)" (touchend)="rowTouchEnd(data)">
       <td class="updated-col-cell" pTooltip="{{data.updated | date: 'medium'}}">
         {{ data.getUpdated() }}
       </td>
@@ -162,9 +162,7 @@
         </span>
       </td>
       <td colspan="3" (click)="quickviewFields(data, $event)" class="zoom-in">
-        <div class="fields-scroller keep-fields-format">
-          {{ data.fieldsAsString }}
-        </div>
+        <div class="fields-scroller keep-fields-format">{{data.fieldsAsString}}</div>
       </td>
     </tr>
   </ng-template>
